fix shifting layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,6 +48,8 @@ html ::selection {
 }
 
 body {
+  max-width: 100vw;
+
   overflow-x: hidden;
   background-color: #fbfbfb;
   scroll-behavior: smooth;
